# ThreatDetectives

./: LICENSE  README.md  finalized_model.pkl  pyproject.toml  requirements.md  text_categorizer_model copy.ipynb  text_categorizer_model.ipynb  vectorizer_pickle.pkl
