[tool.poetry]
name = "threatdetectives"
version = "0.1.0"
description = ""
authors = ["Hexx King <hexxking13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.0"
nltk = "^3.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
